--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -17,6 +17,8 @@
         
         <a class='nav-link' href="{% url 'home' %}">Home page</a>
         <a class='nav-link' href="{% url 'list' %}">List page</a>
+        
+        <a class='nav-link' href="{% url 'create' %}">Create School</a>
 
     </nav>
 
